# ptcg-meta-bench

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  install.ps1  install.sh  kaggle_post.md  pyproject.toml
.github/workflows/: ci.yml
decks/meta/: 02_petrel_froslass.csv  03_energy_recycler.csv  05_yveltal_risky_ruins.csv  06_eri_wondrous_patch.csv  07_mega_kangaskhan_ogerpon.csv  08_mega_starmie.csv  09_nighttime_mine_fezandipiti.csv  10_mega_lucario.csv  README.md  registry.json
examples/: meta_results_sample.csv
examples/agents/simple_baseline/: main.py  metadata.json
scripts/: bootstrap_engine.py  mcp_smoke_client.py  run_mini_benchmark.py
src/ptcg_meta_bench/: __init__.py  agent_contract.py  benchmark.py  cli.py  engine.py  match.py  mcp_server.py  paths.py
tests/: test_cli_v11.py  test_installers_v11.py  test_smoke.py
