[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcg-meta-bench"
version = "1.1.0"
description = "Local meta-weighted benchmark harness for Pokemon TCG AI Battle agents."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "goldbar123467"}
]
keywords = ["pokemon-tcg", "kaggle", "game-ai", "benchmark", "simulator"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
ptcg-meta-bench = "ptcg_meta_bench.cli:main"
ptcg = "ptcg_meta_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
